--- a/app.yaml
+++ b/app.yaml
@@ -14,5 +14,5 @@ handlers:
   static_files: app/index.html
   upload: app/index.html
 
-- url: /.well-known
+- url: /.well-known/*
   static_dir: .well-known
